--- a/index.html
+++ b/index.html
@@ -36,7 +36,9 @@
 {
     visibility: hidden !important;
 }
-</style></head>
+</style>
+
+</head>
 
   <body id="page-top">
 
@@ -358,4 +360,6 @@
 
 
 
-</body></html>
+</body>
+
+</html>
